# electoral-ink-detector

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pipeline.py  pipeline_cpu.py  pipeline_wrapper.py  pipeline_yolo.py  pyproject.toml  render.yaml  startup.sh
frontend/: next.config.ts  package-lock.json  package.json  start-https.sh  start.sh
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CameraCapture.tsx  ErrorCard.tsx  LoadingSpinner.tsx  ResultCard.tsx  SimpleUpload.tsx
frontend/lib/: api.ts
